IPS enhancements